# Nasa-ADC-2020

./: .gitignore  CMakeLists.txt  README.md  build.py  downloadAssets.py  generateHeightmap.py  generateSphere.py
app/: CMakeLists.txt
app/nasaApp/: nasaApp.cpp
data/: generateImage.py
include/: angles.hpp  dataToSphere.hpp  dataToStaticArray.py  gui.h  heightmap.hpp  math.hpp  pathfinding.hpp
shaders/: compile_shaders.sh
src/: main.cpp  oldmain  triangle
